# hydromancer-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: stream_bbo_users.py  stream_orderbook.py  stream_quotes.py  stream_tracked_user_liquidity.py  validate_orderbook.py
src/hydromancer_sdk/: __init__.py
src/hydromancer_sdk/_internal/: l4_formats.py  stats.py
src/hydromancer_sdk/orderbook/: __init__.py  book.py  client.py  sync.py  validation.py
tests/: __init__.py  test_orderbook.py
